Fix dumb issues with tracker and RPS selection stretching

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: ;
-    align-items: stretch;
+    align-items: center;
     background-color: blueviolet;
     height: 100vh;
     padding: 20px;
@@ -32,8 +32,9 @@ h2 {
     text-align: center;
 }
 .tracker {
-    flex: 1;
     display: flex;
+    width: 80vw;
+    max-width: 800px;
     justify-content: space-between;
     align-items: center;
     gap: 20px;
@@ -63,19 +64,25 @@ h2 {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    width: 70vw;
+    max-width: 700px;
     margin: 50px;
 }
 #scoreboard > button {
     flex: 1;
     height: 150px;
-    width: 200px;
+    align-self: stretch;
+    min-width: 0px;
     background-color: orange;
     border-radius: 2em;
     font-size: 24px;
     font-weight: bold;
 }
 #Output {
+    background-color: orange;
+    padding: 30px;
     margin: auto;
+    border-radius: 1em;
     text-align: center;
     font-size: 36px;
 }
